--- a/fll/specifications/fss/fss-0002.html
+++ b/fll/specifications/fss/fss-0002.html
@@ -81,7 +81,7 @@
 
             <div class="section-content">
               <p class="p">
-                The version date of this specification is <code class="code">2023/07/14</code>.
+                The version date of this specification is <code class="code">2024/01/15</code>.
               </p>
               <p class="p">
                 Each Object starts at the beginning of a line and white space to the left of the Object is not treated as an object.
@@ -93,7 +93,7 @@
                 Any Content that could be interpreted as a valid Object must have the colon delimited.
               </p>
               <p class="p">
-                There is no single-quote, double-quote, or backtick delimitation in this specification.
+                There is no single-quote, double-quote, or grave delimitation in this specification.
                 Only a colon <code class="code">:</code> (<code class="code">U+003A</code>) that would result in a valid Object can be delimited.
               </p>
               <p class="p">
