--- a/fll/specifications/fss/fss-0003.html
+++ b/fll/specifications/fss/fss-0003.html
@@ -81,7 +81,7 @@
 
             <div class="section-content">
               <p class="p">
-                The version date of this specification is <code class="code">2023/07/14</code>.
+                The version date of this specification is <code class="code">2024/01/15</code>.
               </p>
               <p class="p">
                 Each Object starts at the beginning of a line and white space to the left of the Object is not treated as an object.
@@ -95,7 +95,7 @@
                 White space may follow a valid close-brace <code class="code">}</code> (<code class="code">U+007D</code>) but a terminating newline must be present to designate a valid end of Content.
               </p>
               <p class="p">
-                There is no single-quote, double-quote, or backtick delimitation in this specification.
+                There is no single-quote, double-quote, or grave delimitation in this specification.
                 Only an open-brace <code class="code">{</code> (<code class="code">U+007B</code>) that would result in a valid Object or a close-brace <code class="code">}</code> (<code class="code">U+007D</code>) that would terminate valid Content can be delimited.
                 When inside potentially valid Content (which follows a valid Object) the open-brace <code class="code">{</code> (<code class="code">U+007B</code>) cannot be delimited because this standard is not-recursive.
                 When not inside any potentially valid Content (that is, there is no previous unclosed Object), then the Object may be delimited.
