--- a/fll/specifications/fss/fss-000a.html
+++ b/fll/specifications/fss/fss-000a.html
@@ -81,7 +81,7 @@
 
             <div class="section-content">
               <p class="p">
-                The version date of this specification is <code class="code">2023/07/14</code>.
+                The version date of this specification is <code class="code">2024/01/15</code>.
               </p>
               <p class="p">
                 This is based off of <code class="code">fss-0001 (Extended)</code>, except the Object is at the end of the line.
@@ -91,7 +91,7 @@
                 White space separates an Object from the Content.
                 An Object may be followed by a newline, in which case means that the Object has no Content.
                 If only printing white spaces or non-printable characters follow a valid Object, then that Object is considered to have no Content.
-                An Object may be quoted to include whitespace where a single quote <code class="code">'</code> (<code class="code">U+0027</code>), a double quote <code class="code">"</code> (<code class="code">U+0022</code>), or a backtick <code class="code">`</code> (<code class="code">U+0060</code>) are used to quote.
+                An Object may be quoted to include whitespace where a single quote <code class="code">'</code> (<code class="code">U+0027</code>), a double quote <code class="code">"</code> (<code class="code">U+0022</code>), or a grave <code class="code">`</code> (<code class="code">U+0060</code>) are used to quote.
               </p>
               <p class="p">
                 Content exists on the same line as the Object.
