--- a/fll/specifications/fss/fss-0000.html
+++ b/fll/specifications/fss/fss-0000.html
@@ -80,14 +80,14 @@
 
             <div class="section-content">
               <p class="p">
-                The version date of this specification is <code class="code">2023/07/14</code>.
+                The version date of this specification is <code class="code">2024/01/15</code>.
               </p>
               <p class="p">
                 Each Object starts at the beginning of a line and white space to the left of the Object is not treated as part of the object.
                 White space separates an Object from the Content.
                 An Object may be preceded by a newline, in which case means that the Object has no Content.
                 If only printing white spaces or non-printable characters follow a valid Object, then that Object is considered to have no Content.
-                An Object may be quoted to include whitespace where a single quote <code class="code">'</code> (<code class="code">U+0027</code>), a double quote <code class="code">"</code> (<code class="code">U+0022</code>), or a backtick <code class="code">`</code> (<code class="code">U+0060</code>) are used to quote.
+                An Object may be quoted to include whitespace where a single quote <code class="code">'</code> (<code class="code">U+0027</code>), a double quote <code class="code">"</code> (<code class="code">U+0022</code>), or a grave <code class="code">`</code> (<code class="code">U+0060</code>) are used to quote.
               </p>
               <p class="p">
                 Content exists on the same line as the Object.
