Update: News - 2024 / 03 / 03 - FLL 0.6.9 Stable Release.
Update all appropriate pages regarding the release.

Add the git.kevux.org repository link where it is found to be missing from.

--- a/news.html
+++ b/news.html
@@ -51,6 +51,10 @@
       <div id="nav-expanded" class="nav-block">
         <nav id="kevux-document-nav" class="nav-menu">
           <div class="nav-item block">
+            <div class="nav-text notice">2024 / 03 / 03</div>
+            <a href="news/2024/2024_03_03-fll_0_6_9_release.html" class="nav-text link">FLL 0.6.9 Release</a>
+          </div>
+          <div class="nav-item block">
             <div class="nav-text notice">2024 / 02 / 24</div>
             <a href="news/2024/2024_02_24-programming_happenings.html" class="nav-text link">Programming Happenings</a>
           </div>
@@ -88,6 +92,33 @@
 
           <article id="2024_02_24-programming_happenings" class="article">
             <header class="article-header header">
+              <h2 id="2024_02_24-programming_happenings-title" class="article-title h h2">2024 / 03 / 03 - FLL 0.6.9 Release</h2>
+            </header>
+
+            <div class="article-content">
+              <p class="p">
+                The <strong class="strong">Featureless Linux Library</strong> stable version 0.6.9 is released.
+              </p>
+              <p class="p">
+                This release address newly discovered bugs and problems that have been exposed by unit tests from the 0.7 development branch and some real world use cases.
+              </p>
+              <p class="p">
+                This brings in some security related problems and upgrading is recommended.
+              </p>
+              <p class="p">
+                A significant amount of development in the 0.7 development code base has yielded a number of changes worth back porting into this 0.6 stable code base.
+              </p>
+              <p class="p">
+                The firewall program has seen some considerable review and bug fixes.
+              </p>
+              <p class="p">
+                <a id="2024_03_03-fll_0_6_9_release-more" href="news/2024/2024_03_03-fll_0_6_9_release.html" class="content link" aria-labelledby="2024_03_03-fll_0_6_9_release-more 2024_03_03-fll_0_6_9_release-title">Continue reading…</a>
+              </p>
+            </div>
+          </article>
+
+          <article id="2024_02_24-programming_happenings" class="article">
+            <header class="article-header header separate">
               <h2 id="2024_02_24-programming_happenings-title" class="article-title h h2">2024 / 02 / 24 - Programming Happenings</h2>
             </header>
 
